--- a/Servicio-documentacion/src/main/resources/Application.yml
+++ b/Servicio-documentacion/src/main/resources/Application.yml
@@ -10,7 +10,7 @@ eureka:
     register-with-eureka: true
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://SERVICIO-EUREKA:8761/eureka/
       
 swagger: 
   config: 
