--- a/Api-Gateway/src/main/resources/bootstrap.properties
+++ b/Api-Gateway/src/main/resources/bootstrap.properties
@@ -1,4 +1,5 @@
 spring.application.name=servicio-api-gateway
+server.port=8083
 spring.profiles.active=dev
 spring.cloud.config.uri=http://servicio-configuracion:8888
 management.endpoints.web.exposure.include=*
